--- a/dotnetapp/WebApp/appsettings.json
+++ b/dotnetapp/WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnectionString": "User ID-sa;password-examlyMssql@123;server-localhost;Database=AC_SERVER; trusted_connection=true; Persist Security Info=True:Encrypt=True;TrustServerCertificate=True;"
+  }
 }
