--- a/dotnetapp/AC_SERVICE_API/Properties/launchSettings.json
+++ b/dotnetapp/AC_SERVICE_API/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https:0.0.0.0:8080",
+      "applicationUrl": "http://0.0.0.0:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
