--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
