--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "karma-coverage": "2.2.0",
     "ng2-search-filter": "^0.5.1",
