--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
+    "jquery": "^3.7.0",
+    "ng2-search-filter": "^0.5.1",
+    "puppeteer": "^20.9.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
