--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~10.1.3",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
-    "@angular/core": "^16.1.5",
+    "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
@@ -29,16 +29,16 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "^16.1.4",
-    "@angular/compiler-cli": "^16.1.5",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "~10.1.3",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.4.2",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
