--- a/dotnetapp/AC_SERVICE_API/AC_SERVICE_API.csproj
+++ b/dotnetapp/AC_SERVICE_API/AC_SERVICE_API.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Polybioz.HtmlRenderer.PdfSharp.Core" Version="1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <!-- <PackageReference Include="System.Threading.Tasks" Version="5.0.0" /> -->
   </ItemGroup>
